--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -67,7 +67,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;xinput.lib;d3d11.lib;dxguid.lib;DXGI.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;xinput.lib;d3d11.lib;d3d12.lib;dxguid.lib;DXGI.lib;d3dcompiler.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -90,11 +90,13 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;xinput.lib;d3d11.lib;dxguid.lib;DXGI.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;xinput.lib;d3d11.lib;d3d12.lib;dxguid.lib;DXGI.lib;d3dcompiler.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\core\SolarPrimitives.h" />
+    <ClInclude Include="src\renderer\dx12\d3dx12.h" />
+    <ClInclude Include="src\renderer\dx12\DX12Types.h" />
     <ClInclude Include="src\resources\SolarResources.h" />
     <ClInclude Include="src\resources\SolarResourceTypes.h" />
     <ClInclude Include="src\core\SolarApplication.h" />
@@ -134,6 +136,9 @@
     <ClCompile Include="src\renderer\dx11\DX11RenderCommands.cpp" />
     <ClCompile Include="src\renderer\dx11\DX11StaticMesh.cpp" />
     <ClCompile Include="src\renderer\dx11\DX11Texture.cpp" />
+    <ClCompile Include="src\renderer\dx12\DX12Mesh.cpp" />
+    <ClCompile Include="src\renderer\dx12\DX12Program.cpp" />
+    <ClCompile Include="src\renderer\dx12\DX12Renderer.cpp" />
     <ClCompile Include="src\resources\SolarResources.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
