--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -13,3 +13,13 @@ Pos=23,64
 Size=306,329
 Collapsed=0
 
+[Window][Assets]
+Pos=85,61
+Size=484,407
+Collapsed=0
+
+[Window][Inspector]
+Pos=47,193
+Size=582,304
+Collapsed=0
+
