--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="src\renderer\dx11\DX11Renderer.cpp" />
     <ClCompile Include="src\renderer\dx11\DX11StaticMesh.cpp" />
     <ClCompile Include="src\renderer\dx11\DX11Texture.cpp" />
+    <ClCompile Include="src\resources\ModelGenerator.cpp" />
     <ClCompile Include="src\resources\SolarResources.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
