--- a/imgui.ini
+++ b/imgui.ini
@@ -3,3 +3,13 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Assets]
+Pos=125,230
+Size=486,291
+Collapsed=0
+
+[Window][Inspector]
+Pos=57,105
+Size=458,249
+Collapsed=0
+
