--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Entry.cpp" />
+    <ClCompile Include="src\lightmapper\LightMapping.cpp" />
     <ClCompile Include="src\processors\AssetIdGenerator.cpp" />
     <ClCompile Include="src\Processors\AssetPacking.cpp" />
     <ClCompile Include="src\processors\BinaryFile.cpp" />
@@ -176,6 +177,7 @@
   <ItemGroup>
     <ClInclude Include="src\Core.h" />
     <ClInclude Include="src\EditorTypes.h" />
+    <ClInclude Include="src\lightmapper\LightMapping.h" />
     <ClInclude Include="src\processors\AssetIdGenerator.h" />
     <ClInclude Include="src\processors\AssetPacking.h" />
     <ClInclude Include="src\processors\BinaryFile.h" />
