just some ui stuff

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Assets]
-Pos=99,118
-Size=486,289
+Pos=228,148
+Size=704,508
 Collapsed=0
 
 [Window][Inspector]
 Pos=717,32
 Size=458,245
+Collapsed=0
+
+[Window][MetaDataFS002_Day_Sunless]
+Pos=96,53
+Size=358,201
+Collapsed=0
+
+[Window][Performance]
+Pos=79,74
+Size=511,364
 Collapsed=0
 
