--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Assets]
-Pos=228,148
+Pos=229,148
 Size=704,508
 Collapsed=0
 
@@ -21,5 +21,10 @@ Collapsed=0
 [Window][Performance]
 Pos=79,74
 Size=511,364
+Collapsed=0
+
+[Window][Room]
+Pos=137,74
+Size=294,233
 Collapsed=0
 
