--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -67,7 +67,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;xinput.lib;d3d11.lib;d3d12.lib;dxguid.lib;DXGI.lib;d3dcompiler.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;xinput.lib;d3d11.lib;d3d12.lib;dxguid.lib;DXGI.lib;d3dcompiler.lib;Ole32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -90,7 +90,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;xinput.lib;d3d11.lib;d3d12.lib;dxguid.lib;DXGI.lib;d3dcompiler.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;xinput.lib;d3d11.lib;d3d12.lib;dxguid.lib;DXGI.lib;d3dcompiler.lib;Ole32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
