--- a/imgui.ini
+++ b/imgui.ini
@@ -10,11 +10,21 @@ Collapsed=0
 
 [Window][Assets]
 Pos=60,60
-Size=462,272
+Size=681,429
 Collapsed=0
 
 [Window][Inspector]
 Pos=60,60
 Size=89,100
+Collapsed=0
+
+[Window][Room]
+Pos=95,59
+Size=515,341
+Collapsed=0
+
+[Window][MetaDataFS002_Day_Sunless]
+Pos=749,59
+Size=425,267
 Collapsed=0
 
