undo system and entity changes

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=268,258
 Collapsed=0
 
 [Window][Assets]
-Pos=60,60
-Size=681,429
+Pos=177,109
+Size=681,428
 Collapsed=0
 
 [Window][Inspector]
@@ -19,12 +19,17 @@ Size=89,100
 Collapsed=0
 
 [Window][Room]
-Pos=95,59
-Size=515,341
+Pos=119,40
+Size=491,473
 Collapsed=0
 
 [Window][MetaDataFS002_Day_Sunless]
 Pos=749,59
 Size=425,267
+Collapsed=0
+
+[Window][Inpsector]
+Pos=711,186
+Size=418,247
 Collapsed=0
 
