--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=268,258
 Collapsed=0
 
 [Window][Assets]
-Pos=177,109
-Size=681,428
+Pos=129,98
+Size=737,521
 Collapsed=0
 
 [Window][Inspector]
@@ -19,8 +19,8 @@ Size=89,100
 Collapsed=0
 
 [Window][Room]
-Pos=119,40
-Size=491,473
+Pos=12,24
+Size=398,379
 Collapsed=0
 
 [Window][MetaDataFS002_Day_Sunless]
@@ -29,7 +29,12 @@ Size=425,267
 Collapsed=0
 
 [Window][Inpsector]
-Pos=711,186
+Pos=809,417
 Size=418,247
+Collapsed=0
+
+[Window][MetaDataPrototype_Green1]
+Pos=60,60
+Size=177,157
 Collapsed=0
 
